# openlong

./: .gitignore  COMMERCIAL_LICENSE.md  LICENSE  PROJECT.md  README.md  pyproject.toml  requirements.txt
docs/: algorithm.md
openlong/: __init__.py  pipeline.py
openlong/align/: aligner.py
openlong/correct/: indel.py  polish.py
openlong/deconv/: cluster.py  consensus.py  positions.py
openlong/genome/: annotate.py  assembly.py
openlong/io/: readers.py  writers.py
openlong/variants/: phasing.py  snv.py  sv.py
scripts/: run_openlong.py
tests/: test_cluster.py  test_indel.py  test_pipeline.py  test_positions.py
