[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "openlong"
version = "0.1.0"
description = "Open-source long-read sequencing pipeline for variant deconvolution and haplotype reconstruction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "OpenLong Contributors"}
]
keywords = ["bioinformatics", "long-read", "sequencing", "PacBio", "nanopore", "haplotype", "variant-calling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pysam>=0.21",
    "scikit-learn>=1.2",
    "click>=8.1",
    "biopython>=1.81",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.0.270",
]

[project.scripts]
openlong = "scripts.run_openlong:cli"

[tool.setuptools.packages.find]
include = ["openlong*", "scripts*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
